# COHERENT-D2O

./: CMakeLists.txt  G4d2o  G4d2o.cc  README.md  README_2.txt  TCStudyHalfV2.root  compileApp.sh  crysetup.txt  setupBuild.sh
configs/: G4d2oCylindricalDetector.cc  G4d2oDetector_Sides.cc
configs/SIDES/: Current_Config_01_2023.cc  G4d2oCylindricalDetector.cc
configs/Sides Configuration/: G4d2oDetector_Sides.cc  G4d2oDetector_Sides.hh
configs/TOP/: G4d2oCylindricalDetector.cc
include/: G4d2oCosmicGun.hh  G4d2oCylindricalDetector.hh  G4d2oDetector.hh  G4d2oDetectorHit.hh  G4d2oElectronGun.hh  G4d2oEventAction.hh  G4d2oMaterialsDefinition.hh  G4d2oMichelElectronGun.hh  G4d2oNeutrinoAlley.hh  G4d2oPhotonGun.hh  G4d2oPhysicsList.hh  G4d2oPrimaryGeneratorAction.hh  G4d2oRunAction.hh  G4d2oSensitiveDetector.hh  G4d2oStackingAction.hh  ReplayTools.h  inputVariables.hh
mac/: vis-dawn.mac  vis-novis.mac  vis-opengl.mac  vis-opengl2.mac  vis-wired.mac  vis-wiredIndividual.mac  vis-wiredKeptEvents.mac  vis-wiredKeptEvents0.mac  vis.mac
opticalData/: pureWaterAbsCoeff.dat_SOURCE  pureWaterAbsFormatting.C  pureWaterAbsFormattingRev.C
scripts/: compareSidePMTs.C  fitCylindricalLightCollection.C  forOlga.C  lastFileName.txt  load_simEvent.C  openLastFile.C  plotCosmic.C  plotCosmicVeto.C  plotLightYield.C  plotLightYieldChain.C  plotPMMA.C  plotPMTPositions.C  plotResolution.C  plotTCOverlay.C  plotTCOverlayHalfNoPrec.C  plotTailCatcherOverlay.C  ploth2oAbs.C  pmtqe.C
simEvent/: CMakeLists.txt  G4d2oGeom.cc  G4d2oGeom.h  simEvent.cc  simEvent.h  simEvent_LinkDef.h
src/: G4d2oCosmicGun.cc  G4d2oCylindricalDetector.cc  G4d2oDetector.cc  G4d2oDetectorHit.cc  G4d2oElectronGun.cc  G4d2oEventAction.cc  G4d2oMaterialsDefinition.cc  G4d2oMichelElectronGun.cc  G4d2oNeutrinoAlley.cc  G4d2oPhotonGun.cc  G4d2oPhysicsList.cc  G4d2oRunAction.cc  G4d2oSensitiveDetector.cc  G4d2oStackingAction.cc  ReplayTools.cc  inputVariables.cc
src/old/: G4d2oCylindricalDetector.cc  G4d2oDetector.cc
xscnData/: fluxWeight.root  haxtonhists.root
